# recognition-science

./: .gitignore  IndisputableMonolith.lean  LICENSE  PAPER_STATUS.md  README.md  RSFOLD_README.md  RSTHETA_README.md  RS_Consciousness_Binding.tex  RS_CostAlgebra_Recognition_Category.tex  RecognitionScience.lean  ZENODO_BUNDLE_DESCRIPTIONS.md  lake-manifest.json  lakefile.lean  pyproject.toml  recognition-science-lean-bundle.txt  recognition-science-lean-framework.txt
IndisputableMonolith/: Constants.lean  Cost.lean  Patterns.lean  README.md
NavierStokes/: ContinuumBridge.lean  ContinuumLimit3D.lean  DiscreteHelicity.lean  DiscreteMaximumPrinciple.lean  DiscreteNSOperator.lean  DiscreteVorticity.lean  EightTickDynamics.lean  FRCBridge.lean  FourierExtraction.lean  Galerkin3D.lean  GalerkinEquicontinuity.lean  JcostMonotonicity.lean  KolmogorovBlockEntropy.lean  KolmogorovCutoff.lean  PhiLadderCutoff.lean  PhiOptimalCascade.lean  RM2UToGlobal.lean  RunningMaxNormalization.lean  SkewHarmGate.lean  StretchingPairs.lean  SubKolmogorovBridge.lean  VortexStretching.lean
RecognitionScience/: Constants.lean  Core.lean  Cost.lean  Patterns.lean
artifacts/: sparc_phi_locked_btfr_locked.json  sparc_phi_locked_little_things_ingest_status.json  sparc_phi_locked_q1_random_half.json  sparc_phi_locked_q1q2_combined.json  sparc_phi_locked_q1q2q3_combined.json  sparc_phi_locked_q2_holdout.json  sparc_phi_locked_q2q3_combined.json  sparc_phi_locked_q3_holdout.json  sparc_phi_locked_wide_binaries_ingest_status.json  sparc_prereg_systematics_lock.json
papers/: RS_PUBLIC_PAPERS_LIST.md  (+10 more)
(+614 files in other folders)
