[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsfold"
version = "0.1.0"
description = "RS-Fold: Glass-box protein folding on the phi-lattice"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jonathan Washburn", email = "washburn@recognitionphysics.org"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.scripts]
rsfold = "rsfold.cli:main"

[project.urls]
Homepage = "https://recognition.physics.org/fold"
Repository = "https://github.com/jonwashburn/recognition-science"
